# coquelicot

./: .gitattributes  .gitignore  .gitlab-ci.yml  INSTALL.md  NEWS.md  README.md  Remakefile.in  _CoqProject  configure.in  opam
examples/: BacS2013.v  BacS2013_bonus.v  Bessel.v  DAlembert.v  Wasow.v
misc/: Dockerfile  ci.md
theories/: AutoDerive.v  Compactness.v  Complex.v  Continuity.v  Derive.v  Derive_2d.v  ElemFct.v  Equiv.v  Hierarchy.v  Iter.v  KHInt.v  Lim_seq.v  Lub.v  Markov.v  PSeries.v  RInt.v  RInt_analysis.v  RInt_gen.v  Rbar.v  Rcomplements.v  SF_seq.v  Seq_fct.v  Series.v
